--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "angular": "~1.4.5",
     "angular-ui-router": "~0.2.15",
-    "angularfire": "~1.1.2"
+    "angularfire": "~1.1.2",
+    "ng-file-upload": "~9.0.8",
+    "ng-file-upload-shim": "~9.0.8"
   }
 }
