--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "koa": "^1.0.0",
     "koa-bodyparser": "^2.0.1",
+    "koa-cors": "0.0.16",
     "koa-logger": "^1.3.0",
     "koa-router": "^5.1.2",
     "koa-static": "^1.4.9",
-    "koa-views": "^3.1.0"
+    "koa-views": "^3.1.0",
+    "mongoose": "^4.1.10"
   }
 }
