--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-ui-router": "~0.2.15",
     "angularfire": "~1.1.2",
     "ng-file-upload": "~9.0.8",
-    "ng-file-upload-shim": "~9.0.8"
+    "ng-file-upload-shim": "~9.0.8",
+    "papaparse": "~4.1.2"
   }
 }
