--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "license": "Nolicense",
   "dependencies": {
     "angular": "~1.4.5",
+    "angular-resource": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "angularfire": "~1.1.2",
     "ng-file-upload": "~9.0.8",
