--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   "license": "Unlicense",
   "dependencies": {
     "aws-sdk": "^2.2.9",
+    "co": "^4.6.0",
+    "co-body": "^4.0.0",
+    "co-monk": "^1.0.0",
     "dotenv": "^1.2.0",
     "koa": "^1.0.0",
+    "koa-body": "^1.3.0",
     "koa-bodyparser": "^2.0.1",
     "koa-cors": "0.0.16",
     "koa-logger": "^1.3.0",
+    "koa-route": "^2.4.2",
     "koa-router": "^5.1.2",
     "koa-static": "^1.4.9",
     "koa-views": "^3.1.0",
-    "mongoose": "^4.1.10"
+    "mongoose": "^4.1.10",
+    "monk": "^1.0.1"
   }
 }
