--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-static": "^1.4.9",
     "koa-views": "^3.1.0",
     "mongoose": "^4.1.10",
-    "monk": "^1.0.1"
+    "monk": "^1.0.1",
+    "nodemailer": "^1.8.0"
   }
 }
