--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "notify",
+  "name": "rtcspeeddating",
   "version": "1.0.0",
-  "description": "Coworking Space Notification Service",
+  "description": "speed dating",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "goofiw",
-  "license": "Unlicense",
+  "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.2.9",
     "co": "^4.6.0",
+    "co-bcrypt": "^1.0.0",
     "co-body": "^4.0.0",
     "co-monk": "^1.0.0",
     "dotenv": "^1.2.0",
+    "jsonwebtoken": "^5.4.0",
     "koa": "^1.0.0",
-    "koa-body": "^1.3.0",
+    "koa-body-parser": "^1.1.2",
     "koa-cors": "0.0.16",
+    "koa-jwt": "^1.1.1",
     "koa-logger": "^1.3.0",
+    "koa-request": "^1.0.0",
     "koa-router": "^5.1.2",
     "koa-static": "^1.4.9",
     "koa-views": "^3.1.0",
     "monk": "^1.0.1",
-    "nodemailer": "^1.8.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/goofiw/rtcspeeddating.git"
+  },
+  "bugs": {
+    "url": "https://github.com/goofiw/rtcspeeddating/issues"
+  },
+  "homepage": "https://github.com/goofiw/rtcspeeddating#readme"
 }
